--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,7 +14,10 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts",
+    "openapi": "ts-node scripts/generate-openapi.ts json",
+    "openapi:json": "ts-node scripts/generate-openapi.ts json",
+    "openapi:yaml": "ts-node scripts/generate-openapi.ts yaml"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.490.0",
@@ -23,6 +26,7 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
     "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/swagger": "^7.4.0",
     "@prisma/client": "^5.8.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -46,7 +50,7 @@
     "prettier": "^3.1.1",
     "prisma": "^5.8.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "yaml": "^2.8.2"
   }
 }
-
