--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,7 @@ services:
       PORT: 3001
       DATABASE_URL: postgres://swiftprints:swiftprints@db:5432/swiftprints
       S3_ENDPOINT: http://minio:9000
+      S3_PUBLIC_ENDPOINT: http://localhost:9000
       S3_ACCESS_KEY: minio
       S3_SECRET_KEY: minio123
       S3_BUCKET: swiftprints
@@ -96,6 +97,7 @@ services:
       PORT: 3001
       DATABASE_URL: postgres://swiftprints:swiftprints@db:5432/swiftprints
       S3_ENDPOINT: http://minio:9000
+      S3_PUBLIC_ENDPOINT: ${S3_PUBLIC_ENDPOINT:-http://localhost:9000}
       S3_ACCESS_KEY: minio
       S3_SECRET_KEY: minio123
       S3_BUCKET: swiftprints
