--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,18 @@ services:
   db:
     image: postgres:15-alpine
     container_name: swiftprints-db
+    env_file:
+      - .env
     environment:
-      POSTGRES_USER: swiftprints
-      POSTGRES_PASSWORD: swiftprints
-      POSTGRES_DB: swiftprints
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U swiftprints"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-swiftprints}"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -20,12 +22,14 @@ services:
     image: minio/minio:latest
     container_name: swiftprints-minio
     command: server /data --console-address ":9001"
+    env_file:
+      - .env
     ports:
       - "9000:9000"
       - "9001:9001"
     environment:
-      MINIO_ROOT_USER: minio
-      MINIO_ROOT_PASSWORD: minio123
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
     volumes:
       - miniodata:/data
     healthcheck:
@@ -37,14 +41,16 @@ services:
   minio-init:
     image: minio/mc:latest
     container_name: swiftprints-minio-init
+    env_file:
+      - .env
     depends_on:
       minio:
         condition: service_healthy
     entrypoint: >
       /bin/sh -c "
-      mc alias set myminio http://minio:9000 minio minio123;
-      mc mb myminio/swiftprints --ignore-existing;
-      mc anonymous set download myminio/swiftprints;
+      mc alias set myminio http://minio:9000 ${MINIO_ROOT_USER} ${MINIO_ROOT_PASSWORD};
+      mc mb myminio/${S3_BUCKET} --ignore-existing;
+      mc anonymous set download myminio/${S3_BUCKET};
       exit 0;
       "
 
@@ -57,26 +63,27 @@ services:
       dockerfile: Dockerfile
     container_name: swiftprints-backend
     command: npm run start:dev
+    env_file:
+      - .env
     environment:
-      NODE_ENV: development
-      PORT: 3001
-      DATABASE_URL: postgres://swiftprints:swiftprints@db:5432/swiftprints
-      S3_ENDPOINT: http://minio:9000
-      S3_PUBLIC_ENDPOINT: http://localhost:9000
-      S3_ACCESS_KEY: minio
-      S3_SECRET_KEY: minio123
-      S3_BUCKET: swiftprints
-      S3_REGION: us-east-1
-      SLICER_JOBS_PATH: /tmp/slicer_jobs
-      SLICER_CONFIG_PATH: /config
-      CORS_ORIGIN: http://localhost:5173,http://localhost:8080,http://localhost:8081
-      # Auth settings
-      ADMIN_USERNAME: admin
-      ADMIN_PASSWORD: admin123
-      JWT_SECRET: swift-prints-jwt-secret-key-2024
-      JWT_EXPIRES_IN: 24h
+      NODE_ENV: ${NODE_ENV:-development}
+      PORT: ${PORT:-3001}
+      DATABASE_URL: ${DATABASE_URL}
+      S3_ENDPOINT: ${S3_ENDPOINT}
+      S3_PUBLIC_ENDPOINT: ${S3_PUBLIC_ENDPOINT}
+      S3_ACCESS_KEY: ${S3_ACCESS_KEY}
+      S3_SECRET_KEY: ${S3_SECRET_KEY}
+      S3_BUCKET: ${S3_BUCKET}
+      S3_REGION: ${S3_REGION}
+      SLICER_JOBS_PATH: ${SLICER_JOBS_PATH}
+      SLICER_CONFIG_PATH: ${SLICER_CONFIG_PATH}
+      CORS_ORIGIN: ${CORS_ORIGIN}
+      ADMIN_USERNAME: ${ADMIN_USERNAME}
+      ADMIN_PASSWORD: ${ADMIN_PASSWORD}
+      JWT_SECRET: ${JWT_SECRET}
+      JWT_EXPIRES_IN: ${JWT_EXPIRES_IN}
     ports:
-      - "3001:3001"
+      - "${PORT:-3001}:${PORT:-3001}"
     depends_on:
       db:
         condition: service_healthy
@@ -97,21 +104,27 @@ services:
       dockerfile: Dockerfile
     container_name: swiftprints-backend
     command: npm run start:prod
+    env_file:
+      - .env
     environment:
-      NODE_ENV: production
-      PORT: 3001
-      DATABASE_URL: postgres://swiftprints:swiftprints@db:5432/swiftprints
-      S3_ENDPOINT: http://minio:9000
-      S3_PUBLIC_ENDPOINT: ${S3_PUBLIC_ENDPOINT:-http://localhost:9000}
-      S3_ACCESS_KEY: minio
-      S3_SECRET_KEY: minio123
-      S3_BUCKET: swiftprints
-      S3_REGION: us-east-1
-      SLICER_JOBS_PATH: /tmp/slicer_jobs
-      SLICER_CONFIG_PATH: /config
-      CORS_ORIGIN: ${CORS_ORIGIN:-http://localhost:5173}
+      NODE_ENV: ${NODE_ENV:-production}
+      PORT: ${PORT:-3001}
+      DATABASE_URL: ${DATABASE_URL}
+      S3_ENDPOINT: ${S3_ENDPOINT}
+      S3_PUBLIC_ENDPOINT: ${S3_PUBLIC_ENDPOINT}
+      S3_ACCESS_KEY: ${S3_ACCESS_KEY}
+      S3_SECRET_KEY: ${S3_SECRET_KEY}
+      S3_BUCKET: ${S3_BUCKET}
+      S3_REGION: ${S3_REGION}
+      SLICER_JOBS_PATH: ${SLICER_JOBS_PATH}
+      SLICER_CONFIG_PATH: ${SLICER_CONFIG_PATH}
+      CORS_ORIGIN: ${CORS_ORIGIN}
+      ADMIN_USERNAME: ${ADMIN_USERNAME}
+      ADMIN_PASSWORD: ${ADMIN_PASSWORD}
+      JWT_SECRET: ${JWT_SECRET}
+      JWT_EXPIRES_IN: ${JWT_EXPIRES_IN}
     ports:
-      - "3001:3001"
+      - "${PORT:-3001}:${PORT:-3001}"
     depends_on:
       db:
         condition: service_healthy
