--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,69 @@
+# ============================================
+# Swift Prints Environment Configuration
+# ============================================
+# Copy this file to .env and update with your values
+# cp .env.example .env
+
+# ============================================
 # Database Configuration
+# ============================================
 POSTGRES_USER=swiftprints
 POSTGRES_PASSWORD=swiftprints
 POSTGRES_DB=swiftprints
 DATABASE_URL=postgres://swiftprints:swiftprints@db:5432/swiftprints
 
-# MinIO/S3 Configuration
-MINIO_ROOT_USER=minio
-MINIO_ROOT_PASSWORD=minio123
-S3_ENDPOINT=http://minio:9000
-S3_PUBLIC_ENDPOINT=http://localhost:9000
-S3_ACCESS_KEY=minio
-S3_SECRET_KEY=minio123
+# ============================================
+# S3 Storage Configuration
+# ============================================
+# For LocalStack (development):
+#   S3_ENDPOINT=http://localstack:4566
+#   S3_PUBLIC_ENDPOINT=http://localhost:4566
+#   S3_ACCESS_KEY=test
+#   S3_SECRET_KEY=test
+#
+# For AWS S3 (production):
+#   S3_ENDPOINT=                    # Leave empty for AWS S3
+#   S3_PUBLIC_ENDPOINT=             # Optional: CloudFront URL
+#   S3_ACCESS_KEY=your-aws-access-key
+#   S3_SECRET_KEY=your-aws-secret-key
+
+S3_ENDPOINT=http://localstack:4566
+S3_PUBLIC_ENDPOINT=http://localhost:4566
+S3_ACCESS_KEY=test
+S3_SECRET_KEY=test
 S3_BUCKET=swiftprints
 S3_REGION=us-east-1
 
+# ============================================
 # Backend Configuration
+# ============================================
 NODE_ENV=development
 PORT=3001
-CORS_ORIGIN=http://localhost:5173,http://localhost:8080,http://localhost:8081
+CORS_ORIGIN=http://localhost:5173
 
+# ============================================
 # Slicer Configuration
+# ============================================
 SLICER_JOBS_PATH=/tmp/slicer_jobs
 SLICER_CONFIG_PATH=/config
 
+# ============================================
 # Authentication Configuration
+# ============================================
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin123
-JWT_SECRET=swift-prints-jwt-secret-key-2024
+JWT_SECRET=swift-prints-secret-key-change-in-production
 JWT_EXPIRES_IN=24h
+
+# ============================================
+# Email Configuration (Resend)
+# ============================================
+# If RESEND_API_KEY is not set, emails will be logged to console (mock mode)
+EMAIL_PROVIDER=resend
+RESEND_API_KEY=
+RESEND_FROM_EMAIL=noreply@yourdomain.com
+
+# ============================================
+# LocalStack Configuration (Optional)
+# ============================================
+LOCALSTACK_DEBUG=0
