--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,9 +87,9 @@ services:
     depends_on:
       db:
         condition: service_healthy
-      minio:
+      localstack:
         condition: service_healthy
-      minio-init:
+      localstack-init:
         condition: service_completed_successfully
     volumes:
       - ./apps/backend/src:/app/src
@@ -128,11 +128,56 @@ services:
     depends_on:
       db:
         condition: service_healthy
-      minio:
+      localstack:
         condition: service_healthy
-      minio-init:
+      localstack-init:
         condition: service_completed_successfully
+
+  localstack:
+    image: localstack/localstack:latest
+    container_name: swiftprints-localstack
+    ports:
+      - "4566:4566" # LocalStack edge port
+      - "4510-4559:4510-4559" # External services port range
+    environment:
+      SERVICES: s3
+      DEBUG: ${LOCALSTACK_DEBUG:-0}
+      DATA_DIR: /var/lib/localstack/data
+      DOCKER_HOST: unix:///var/run/docker.sock
+      PERSISTENCE: 1
+    volumes:
+      - localstackdata:/var/lib/localstack
+      - /var/run/docker.sock:/var/run/docker.sock
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:4566/_localstack/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  localstack-init:
+    image: amazon/aws-cli:latest
+    container_name: swiftprints-localstack-init
+    depends_on:
+      localstack:
+        condition: service_healthy
+    entrypoint: >
+      /bin/sh -c "
+      until aws --endpoint-url=http://localstack:4566 s3 ls; do
+        echo 'Waiting for LocalStack...';
+        sleep 2;
+      done;
+      aws --endpoint-url=http://localstack:4566 s3 mb s3://${S3_BUCKET:-swiftprints} || true;
+      echo '{\"CORSRules\":[{\"AllowedOrigins\":[\"*\"],\"AllowedMethods\":[\"GET\",\"HEAD\",\"PUT\",\"POST\",\"DELETE\"],\"AllowedHeaders\":[\"*\"],\"ExposeHeaders\":[\"ETag\",\"Content-Length\"],\"MaxAgeSeconds\":3000}]}' > /tmp/cors-config.json;
+      aws --endpoint-url=http://localstack:4566 s3api put-bucket-cors --bucket ${S3_BUCKET:-swiftprints} --cors-configuration file:///tmp/cors-config.json || true;
+      echo 'Bucket ${S3_BUCKET:-swiftprints} created and CORS configured';
+      exit 0;
+      "
+    environment:
+      AWS_ACCESS_KEY_ID: ${S3_ACCESS_KEY:-test}
+      AWS_SECRET_ACCESS_KEY: ${S3_SECRET_KEY:-test}
+      AWS_DEFAULT_REGION: ${S3_REGION:-us-east-1}
 
 volumes:
   pgdata:
   miniodata:
+  localstackdata:
