chore: update package.json and pnpm-lock.yaml to include wrangler as a dev dependency

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "docker:dev": "docker-compose --profile dev up -d"
   },
   "devDependencies": {
-    "pnpm": "^8.15.0"
+    "pnpm": "^8.15.0",
+    "wrangler": "^4.55.0"
   }
 }
