--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,8 +1,10 @@
 {
-  "//": "Cloudflare Workers / Pages configuration for deploying the frontend-hack app from the repo root",
+  "//": "Cloudflare Workers configuration for deploying the frontend-hack app as an SPA",
   "name": "swift-prints-frontend-hack",
+  "main": "worker.ts",
   "compatibility_date": "2025-12-18",
   "assets": {
-    "directory": "./apps/frontend-hack/dist"
+    "directory": "./apps/frontend-hack/dist",
+    "binding": "ASSETS"
   }
 }
